--- a/all_sketches.css
+++ b/all_sketches.css
@@ -1,8 +1,8 @@
 iframe {
-    width: 500px;
-    height: 300px;
-    display: block;
+    width: 450px;
+    height: 450px;
     overflow: hidden;
+    float: left;
 }
 
 html, body, iframe {
